--- a/catalog.html
+++ b/catalog.html
@@ -136,16 +136,16 @@
           <div class="form-group">
               <label for="cost">Цена: 100 руб. – 500 руб.</label>
               <div class="form-group-style">
-                <input type="range" name="cost" min="100" max="500">
+                <input class="form-group-style-range" type="range" name="cost" min="100" max="500">
               </div>
           </div>
           <div class="form-group">
               <label>Жирность:</label>
               <div class="form-group-style">
-                <input class="visually-hidden form-group__fat-radio" type="radio" name="fat" id="fat"><label for="fat"> 0%</label>
-                <input class="visually-hidden form-group__fat-radio" type="radio" name="fat" id="fat"><label for="fat"> до 10%</label>
-                <input class="visually-hidden form-group__fat-radio" type="radio" name="fat" id="fat"><label for="fat"> до 30%</label>
-                <input class="visually-hidden form-group__fat-radio" type="radio" name="fat" id="fat"><label for="fat"> выше 30%</label>
+                <input class="visually-hidden form-group__fat-radio" type="radio" name="fat" id="fat1"><label for="fat1"> 0%</label>
+                <input class="visually-hidden form-group__fat-radio" type="radio" name="fat" id="fat2"><label for="fat2"> до 10%</label>
+                <input class="visually-hidden form-group__fat-radio" type="radio" name="fat" id="fat3"><label for="fat3"> до 30%</label>
+                <input class="visually-hidden form-group__fat-radio" type="radio" name="fat" id="fat4"><label for="fat4"> выше 30%</label>
               </div>
           </div>
         </div>
@@ -153,11 +153,11 @@
           <div class="form-group">
               <label class="group-name">Наполнитель:</label>
               <div class="form-group-style">
-                <label><input type="checkbox" name="filler"> шоколадные</label>
-                <label><input type="checkbox" name="filler"> сахарные присыпки</label>
-                <label><input type="checkbox" name="filler"> фрукты</label>
-                <label><input type="checkbox" name="filler"> сиропы</label>
-                <label><input type="checkbox" name="filler"> джемы</label>
+                <input class="visually-hidden form-group__filler-checkbox" type="checkbox" name="filler1" id="filler1"><label for="filler1"> шоколадные</label>
+                <input class="visually-hidden form-group__filler-checkbox" type="checkbox" name="filler2" id="filler2"><label for="filler2"> сахарные присыпки</label>
+                <input class="visually-hidden form-group__filler-checkbox" type="checkbox" name="filler3" id="filler3"><label for="filler3"> фрукты</label>
+                <input class="visually-hidden form-group__filler-checkbox" type="checkbox" name="filler4" id="filler4"><label for="filler4"> сиропы</label>
+                <input class="visually-hidden form-group__filler-checkbox" type="checkbox" name="filler5" id="filler5"><label for="filler5"> джемы</label>
               </div>
           </div>
           <button class="form-group-button">Применить</button>
