Отредактировала баттоны и раздел бенефитс

--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
                       <label class="visually-hidden" for="user-password ">Пароль для авторизации</label>
                       <input type="password" placeholder="Пароль" name="user-password" id="user-password" required>
                       <div class="enter-field__submit">
-                          <button class="button" type="submit">Войти</button>
+                          <button class="enter-field__button button" type="submit">Войти</button>
                           <div class="enter-field__forgot-password">
                             <a class="enter-field__password-reminder" href="">Забыли пароль?</a>
                             <a class="enter-field__new-user" href="">Новая регистрация</a>
