Личный проект: начинаем оформление декоративных элементов

--- a/index.html
+++ b/index.html
@@ -98,12 +98,10 @@
     <main>
         <h1 class="visually-hidden">Интернет-магазин мороженого</h1>
         <div class="carousel">
-          <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-          <input class="visually-hidden" type="radio" id="product-2" name="toggle">
-          <input class="visually-hidden" type="radio" id="product-3" name="toggle">
-
+          <input class="product-1 visually-hidden" type="radio" id="product-1" name="toggle" checked>
+          <input class="product-2 visually-hidden" type="radio" id="product-2" name="toggle">
+          <input class="product-3 visually-hidden" type="radio" id="product-3" name="toggle">
           <div class="carousel__bg-helper"></div>
-
           <div class="carousel__slide carousel__slide--active">
             <img src="img/carousel/12.png" height="584" alt="Фото мороженки" style="visibility: hidden">
             <h2>Крем-брюле и пломбир <br>с малиновым джемом</h2>
@@ -250,7 +248,6 @@
         </form>
       </div>
     </section>
-
     <section class="map">
       <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AXWUbK2nw6gR2-xpv16dDyL_sRWGopB5q&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script>
       <div class="address">
