Сделала, чтобы форма обратной связи не закрывалась, когда на нее нажимаешь

--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,7 @@
       </nav>
       <div class="contacts">
         <p class="contacts__worktime">С 10 до 20, ежедневно</p>
-        <p class="contacts__phone"><a href="tel: 8 812 450-25-25">8 812 450-25-25</a></p>
+        <p class="contacts__phone"><a href="tel:88124502525">8 812 450-25-25</a></p>
     </div>
     </header>
     <main class="main">
@@ -307,11 +307,6 @@
         <li class="pagination__item"><a class="pagination__link" href="">&gt;</a></li>
       </ul>
     </main>
-
-
-    <!-- Все, что ниже этого комментария, одинаково для всех страниц сайта -->
-
-
     <footer class="footer">
         <ul class="social-links">
           <li class="social-links__item">
