--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
       </nav>
       <div class="contacts">
         <p class="contacts__worktime">С 10 до 20, ежедневно</p>
-        <p class="contacts__phone"><a href="tel: 8 812 450-25-25">8 812 450-25-25</a></p>
+        <p class="contacts__phone"><a href="tel:88124502525">8 812 450-25-25</a></p>
       </div>
     </header>
 
 
-    <!--  СВЕРХУ ШАПКА -->
+    <!--  Выше форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
 
 
     <div class="call-back--wrapper">
@@ -93,7 +93,9 @@
         </div>
       </div>
 
+
     <!--  Выше форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
+
 
     <main>
         <h1 class="visually-hidden">Интернет-магазин мороженого</h1>
@@ -103,7 +105,7 @@
           <input class="product-3 visually-hidden" type="radio" id="product-3" name="toggle">
           <div class="carousel__bg-helper"></div>
           <div class="carousel__slide carousel__slide--active">
-            <img src="img/carousel/12.png" height="584" alt="Фото мороженки" style="visibility: hidden">
+            <img src="img/carousel__1.png" height="584" alt="Фото мороженки" style="visibility: hidden">
             <h2>Крем-брюле и пломбир <br>с малиновым джемом</h2>
             <a class="full-basket button" href="">Давайте оба!</a>
           </div>
@@ -255,16 +257,11 @@
         <p class="address__text address__text--bold address__text--br">ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</p>
         <p class="address__text">Для заказов по телефону:</p>
         <p class="address__text address__text--bold">
-          <a href="tel: 8 812 450-25-25">8 812 450-25-25 </a> </p><br>
+          <a href="tel:88124502525">8 812 450-25-25 </a> </p><br>
         <p class="address__text">(с 10 до 20 ежедневно)</p>
         <a class="address__button button" href="">Форма обратной связи</a>
       </div>
     </section>
-
-
-    <!-- Все, что ниже этого комментария, одинаково для всех страниц сайта, ПОДВАЛ -->
-
-
     <footer class="footer">
         <ul class="social-links">
           <li class="social-links__item">
